# pebble

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Readme.md  compile.py
.github/workflows/: check.yml  ci.yml  examples.yml
examples/: compile_shaders.py  draw_quad.rs  simple_usage.rs  window.rs  window_setup.rs  winit.rs
examples/assets/shaders/: lit.frag  lit.vert  quad.frag  quad.vert  texture_quad.frag  texture_quad.vert
examples/clear_screen/: Cargo.toml  README.md
examples/clear_screen/src/: main.rs
examples/common/: Cargo.toml  mod.rs  winit_window.rs
examples/common/src/: lib.rs
examples/hello_triangle/: Cargo.toml  README.md
examples/hello_triangle/src/: main.rs
examples/orbit_camera/: Cargo.toml  README.md
examples/orbit_camera/src/: main.rs
examples/quad_native/: Cargo.toml
examples/quad_native/src/: main.rs
examples/quad_web/: Cargo.toml  compile.py  index.html
examples/quad_web/.config/: config.toml
examples/quad_web/pkg/: quad_web.js
examples/quad_web/shaders/: quad.frag
examples/quad_web/shaders/compiled/: quad.frag.spv
examples/quad_web/src/: lib.rs
examples/shaders/: quad.frag  quad.vert
examples/shaders/compiled/: quad.frag.spv  quad.vert.spv
examples/textured_quad/: Cargo.toml  README.md
examples/textured_quad/src/: main.rs
src/: app.rs  assets.rs  commands.rs  errors.rs  lib.rs  main.rs  mesh.rs  prelude.rs  resources.rs  system.rs  system_set.rs
src/assets/: asset_plugin.rs  dependent_asset_plugin.rs  deps.rs  handle.rs  mod.rs  plugin.rs  required.rs  required_resource.rs  singleton_asset.rs  storage.rs  upload.rs
src/ecs/: mod.rs  plugin.rs  resources.rs  system.rs  system_set.rs
src/rendering/: active_frame.rs  async_init.rs  backend.rs  errors.rs  graphics_plugin.rs  mod.rs  render_plugin.rs  sync.rs  web_backend.rs  window.rs  window_plugin.rs
