[package]
name = "pebble"
version = "0.1.0"
edition = "2024"

[dependencies]
hecs = "0.11.0"
slotmap = "1.1.1"
raw-window-handle = "0.6"
tracing = "0.1"

[dev-dependencies]
winit = "0.29"
wgpu = { version = "29.0.1", features = ["spirv"]}
pollster = "0.4.0"
bytemuck = "1.25"
tracing-subscriber = "0.3"
