[package]
name = "pebble-engine"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A modular, ECS-style graphics/app framework for Rust."
repository = "https://github.com/Akihiro120/pebble"
readme = "Readme.md"
keywords = ["graphics", "ecs", "gamedev"]
categories = ["graphics", "game-engines"]

[lib]
name = "pebble"

[dependencies]
hecs = "0.11.0"
slotmap = "1.1.1"
raw-window-handle = "0.6"
tracing = "0.1"
oneshot = "0.1"

# [workspace]
# members = ["examples/draw_quad", "examples/draw_quad_web"]
