[package]
name = "orbit_camera"
version = "0.1.0"
edition = "2024"

[dependencies]
pebble-engine = { path = "../../" }
examples-common = { path = "../common" }
bytemuck = "1.25"
tracing-subscriber = "0.3.2"
wgpu = {version = "29.0.1", features = ["spirv"]}
image = "0.25"
glam = {version = "0.32", features = ["bytemuck"]}
