[package]
name = "quad_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pebble = { path = "../../" }
wgpu = { version = "29.0.1", features = ["webgl", "spirv", "fragile-send-sync-non-atomic-wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCanvasElement", "WebGl2RenderingContext",
] }
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
bytemuck = "1.25"
winit = { version = "0.29.0", features = [] }
